# mashiko

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  cli.py  lexer.py  main.py  mashiko.lark  parser.py  pyproject.toml  result.c  syntax.py
bootstrap/: lexer.msk  span.msk
docs/: introduction.md
examples/: add.msk  box.msk  find_super_prime.msk  hash.msk  hello_world.msk  interfaces.msk  template.msk
mashiko/: __init__.py  __main__.py  cgen.py  cli.py  desugar.py  errors.py  grammar.lark  lexer.py  mashiko.lark  optional.py  parser.py  print_ast.py  sema.py  span.py  syntax.py  transformer.py
mashiko/cgen/: arena.h
mashiko/parser/: __init__.py  grammar.lark  parser.py  syntax.py  transformer.py
mashiko/sema/: __init__.py  cfg.py  coercions.py  core.py  declarations.py  desugaring.py  errors.py  expressions.py  op_method.py  scope.py  sema.py  symbol.py  symbols.py  templates.py  type_lowering.py
src/: main.cpp
src/misc/: flatten_variant.h  pos.cpp  pos.h
src/parser/: char_iter.cpp  char_iter.h  parser.cpp  parser.h
src/parser/ast/: declaration.h  expression.h  literal.h  node.h  operator.h  punctuation.h  statement.h  typing.h  word.h
tests/: test_errors.py  test_parser.py  test_sema.py  test_transformer.py
с/: arena.h
