[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mashiko"
version = "0.1.0"
description = "Parser for the mashiko programming language"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.3.1",
]

[project.scripts]
mashiko = "mashiko.__main__:main"

[tool.setuptools.package-data]
mashiko = ["*.lark"]
